--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format-lint": "biome format src/ && biome lint src/",
+    "format-lint:fix": "biome format src/ --fix && biome lint src/ --fix"
   },
   "dependencies": {
     "astro": "^4.15.3",
     "@astrojs/check": "^0.9.3",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4"
   }
 }
